# insanely-complex-todo

./: README.md  apps.compose.yaml  compose.yaml  db.compose.yaml  docker-compose.yaml  monitoring.compose.yaml  redis.compose.yaml
.github/workflows/: docker-images.yaml
backend/tasks/: Dockerfile  README.md  go.mod  go.sum  main.go
backend/tasks/internal/: interfaces.go
backend/tasks/internal/events/: cli_queue.go  event.go  notification.go  queue.go  queue_test.go  redis_queue.go
backend/tasks/internal/handlers/: errors.go  tasks.go
backend/tasks/internal/models/: task.go
backend/tasks/internal/store/: memory.go  memory_test.go  mongo.go  mongo_test.go
backend/websocket-server/: Dockerfile  README.md  main.py  pyproject.toml
backend/websocket-server/app/: pubsub.py  websockets.py
db/mongodb/: init.js
frontend/: Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/src/: App.svelte  TodoItem.svelte  TodoList.svelte  app.html
frontend/src/components/: App.svelte  Notifications.svelte  TodoItem.svelte
frontend/src/lib/: task.ts  taskStore.ts  task_store.ts
frontend/src/routes/: +page.svelte
k8s/: README.md
k8s/apps/: frontend.yaml  ingress.yaml  tasks-api.yaml  websocket-server.yaml
k8s/services/: mongodb.yaml  redis.yaml
k8s/traefik/: deployment.yaml  rbac.yaml  service.yaml
observability/: README.md  prometheus.yml
observability/grafana/dashboards/: dashboards.yml  mongodb.json  node-exporter.json  redis.json
